Fixed footer overflow

--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -28,6 +28,10 @@ body {
 	overflow-x: hidden;
 }
 
+
+footer {
+	overflow: hidden;
+}
 option {
 	color: #000!important;
 }
